  definitions
  (Clement Blaudeau, review by Florian Angeletti)

* #13874, #13882: Make evaluation order consistent for applications when using
  the non-flambda native compiler
  (Vincent Laviron, report by Jean-Marie Madiot, review by Gabriel Scherer)

- #13942: Fix assertion on empty array case
  (Olivier Nicole, review by Gabriel Scherer)

- #13928, #13944: Fix handling of excessively nested unboxed types
  (Vincent Laviron, review by Gabriel Scherer)

OCaml 5.3.0 (8 January 2025)
----------------------------

(Changes that can break existing programs are marked with a "*")

### Restored backend:

- #12954: Restore the MSVC port
  (David Allsopp, Antonin Décimo, Samuel Hym, and Miod Vallat, review by Nicolás
   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- #12828, #13283: Add short syntax for dependent functor types `(X:A) -> ...`
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #12309, #13158: Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

- #11736, #12664, #13628: Support utf-8 encoded source files and latin-9
  compatible identifiers.
  (Xavier Leroy and Florian Angeletti, review by Daniel Bünzli and
   Jules Aguillon)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #13419: Fix memory bugs in runtime events system.
  (B. Szilvasy and Nick Barnes, review by Miod Vallat, Nick Barnes,
   Tim McGilchrist, and Gabriel Scherer)

- #13364: Emit major slice counters in the runtime events.
  (KC Sivaramakrishnan and Sadiq Jaffer, review by Gabriel Scherer)
